Trying something new in /Developin.../main 01.py

--- a/ver 0.0.1/estate.kv
+++ b/ver 0.0.1/estate.kv
@@ -514,5 +514,11 @@
 					multiline: False
 #*****************************************************	
 	TabbedPanelItem:
-		text: 'Report'
+		text: 'News Feeds'
+#*****************************************************
+	TabbedPanelItem:
+		text: 'Due Deligence'
+#*****************************************************
+	TabbedPanelItem:
+		text: 'Saved Reports'
 
